--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1 class="sids">0</h1>
     <button onclick="localStorage.setItem('sid', Number(localStorage.sid) + 1)">More Now</button>
+    <button onclick="f1()">500 Sids</button>
     <script src="script.js"></script>
 </body>
 </html>
