--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="sids">0</h1>
-    <button onclick="localStorage.setItem('sid', Number(localStorage.sid) + 1)">More Now</button>
+    <button onclick="localStorage.setItem('sid', Number(localStorage.sid) + Number(localStorage.sidpc))">More Now</button>
     <button onclick="f1()">500 Sids</button>
     <script src="script.js"></script>
 </body>
