add visits count

--- a/ja/index.html
+++ b/ja/index.html
@@ -11,6 +11,7 @@
     <h1 class="sids">0</h1>
     <button onclick="localStorage.setItem('sid', Number(localStorage.sid) + Number(localStorage.sidpc))">もっと今</button>
     <button onclick="f1()">500 Sids</button>
+    <a href="https://visits.roshan.cyou"><img src="https://visits.roshan.cyou/umFyXNE1Gyv5ttdD3qHf?label=VISITS&shadow=1&shadowOpacity=30&swap=1&labelBGColor=484848&countBGColor=2574EA&labelTextColor=FFFFFF&countTextColor=FFFFFF" alt="Visits Counter Badge" height=30px/></a>
     <script src="/script.js"></script>
 </body>
 </html>
