add sources in addthis

--- a/ja/index.html
+++ b/ja/index.html
@@ -13,5 +13,7 @@
     <button onclick="f1()">500 Sids</button>
     <a href="https://visits.roshan.cyou"><img src="https://visits.roshan.cyou/umFyXNE1Gyv5ttdD3qHf?label=VISITS&shadow=1&shadowOpacity=30&swap=1&labelBGColor=484848&countBGColor=2574EA&labelTextColor=FFFFFF&countTextColor=FFFFFF" alt="Visits Counter Badge" height=30px/></a>
     <script src="/script.js"></script>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-63f134054c5bf247"></script>
 </body>
 </html>
