--- a/ja/index.html
+++ b/ja/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="MXFjxlLtTWdQQgwREWIuqwQSD5H3lEeUIoil9mQ_xsU" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=360, initial-scale=1.0">
