--- a/pt/index.html
+++ b/pt/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-62B0DQD5NN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+         gtag('config', 'G-62B0DQD5NN');
+      </script>
     <meta name="google-site-verification" content="MXFjxlLtTWdQQgwREWIuqwQSD5H3lEeUIoil9mQ_xsU" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
